# Butler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions_two_ota_largeNVS.csv  sdkconfig
.github/workflows/: ESP32_BUILD.yml  ESP8266_BUILD.yml  ESP8266_TESTS.yml  c-cpp.yml
chip_esp32/: CMakeLists.txt  board_cfg.c  board_cfg.h  ds1307.c  ds1307.h  sdkconfig
chip_esp8266/: board_cfg.c  board_cfg.h  ds1307.c  sdkconfig
kicad/butler_esp8266/: butler_esp8266.kicad_pro  butler_esp8266.kicad_sch
main/: CMakeLists.txt  Kconfig.projbuild  actuator.c  actuator.h  board_cfg.c  board_cfg.h  clearButton.c  clearButton.h  comm.c  comm.h  ds1307.c  ds1307.h  fixedTypes.h  fota.c  fota.h  heartBeat.c  heartBeat.h  idf_component.yml  main.c  nvCron.c  nvCron.h  nvLogRing.c  nvLogRing.h  stateProbe.c  stateProbe.h  sysStat.c  sysStat.h  tmu.c  tmu.h  trap.c  trap.h  version.c  version.h
plans/: test_roadmap.md
server_certs/: ca_key.pem
test/: CMakeLists.txt  README.md  run_test.sh  test_cases.h  test_runner.c  unity_config.h
test/mocks/: actuator_mock.c  actuator_mock.h  ds1307_mock.c  ds1307_mock.h  esp_stubs.c  freertos_mock.c  freertos_mock.h  nvCron_mock.c  nvCron_mock.h  nvs_mock.c  nvs_mock.h  time_mock.c  time_mock.h  tmu_mock.c  tmu_mock.h
test/unit/: test_nvCron.c  test_tmu.c
tools/: README.md  butlerLog.py  cfgReset.py  cron-update.py  getSysStat.py  getTime.py  getVersion.py  readDeviceLogs.py  setTime.py  startFOTAUpgrade.py
tools/samples/: cron_cfg.txt
